# justpath

./: .gitignore  README.md  cspell.config.yaml  justfile  pyproject.toml
.github/config/: justpath.dict
.github/workflows/: python-package.yml
justpath/: oneliners.py  show.py
