[project]
name = "justpath"
version = "0.0.17"
description = "Explore PATH environment variable on Windows and Linux."
authors = [{ name = "Evgeny Pogrebnyak", email = "e.pogrebnyak@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["colorama>=0.4.6", "typer>=0.15.1"]

[project.urls]
repository = "https://github.com/epogrebnyak/justpath"

[project.scripts]
pathit = "justpath.show:typer_app"
justpath = "justpath.show:typer_app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["justpath"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "types-colorama>=0.4.15.20240311",
]
